# csat2

./: .gitignore  download.py  pyproject.toml  readme.rst  setup.py
csat2/: __init__.py  fci.py  locator.py
csat2/CALIPSO/: download.py  granule.py  readfiles.py  util.py
csat2/CERES/: download.py  granule.py
csat2/CloudSat/: download.py  granule.py  readfiles.py
csat2/ECMWF/: ECMWF.py  __init__.py  download.py  unpack_nc.py  variables.py
csat2/EUMETSAT/: download.py
csat2/EarthCARE/: __init__.py  download.py  download_L1.py  geometa.py  granule.py  readfiles.py  utils.py
csat2/FCI/: __init__.py  granule.py
csat2/GOES/: __init__.py  advection.py  granule.py  util.py
csat2/ISCCP/: __init__.py  download.py  granule.py  utils.py
csat2/MADIS/: MADIS.py  __init__.py
csat2/MODIS/: __init__.py  download.py  granule.py  readfiles.py  util.py
csat2/VIIRS/: __init__.py  download.py  granule.py  readfiles.py  util.py
csat2/config/: config.cfg  hardin.txt  hpc-imperial.txt  jasmin.txt  local-machine.txt  seldon.txt
csat2/data/modis_remapping/: altitude_correction.nc  bowtie_correction_1km_2030.nc  bowtie_correction_1km_2040.nc  crosstrack_rectify_1km.nc
csat2/data/viirs_remapping/: bowtie_correction_375m.nc  bowtie_correction_750m.nc  mesh_correction_375m.nc  mesh_correction_750m.nc
csat2/download/: earthdata.py
csat2/misc/: __init__.py  astro.py  bitops.py  dlist.py  fileops.py  geo.py  hdf.py  plotting.py  stats.py  time.py
doc/: conf.py  examples.rst  index.rst  installation.rst  instruments.rst  misc.rst  reference.rst  usage.rst
examples/: earthcare_selection.py  modis_locator_speed.py
tests/: conftest.py  test_CERES.py  test_ISCCP.py  test_earthcare.py  test_ecmwf.py  test_goes.py  test_misc_astro.py  test_misc_bitops.py  test_misc_dlist.py  test_misc_geo.py  test_misc_stats.py  test_misc_time.py  test_modis.py  test_viirs.py
