[project]
name = "csat2"
version = "0.1"
description = "Library for reading and processing observational data"
authors = [
    {name = "Edward Gryspeerdt", email = "e.gryspeerdt@imperial.ac.uk"},
]
dependencies = [
    "google-cloud-storage",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pyhdf",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "xarray",
    "cdsapi",
    "eumdac",
    "satpy"
]
requires-python = ">=3.9"
readme = "readme.rst"
license = {text = "Not currently open source"}
maintainers = [
    {name = "Edward Gryspeerdt", email = "e.gryspeerdt@imperial.ac.uk"},
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.package-dir]
csat2 = "csat2"

[tool.pdm.build]
includes = ["*.py", "CALIPSO", "CloudSat", "config", "data", "download", "ECMWF", "FCI", "GOES", "misc", "MODIS", "VIIRS"]